add persistent UI state handler for panel visibility
- Implement UIStateManager class for managing persistent UI state
- Add state persistence for footer, pinned sidebar, and preview sidebar visibility
- Store state in ~/.config/rovr/ui_state.json with graceful error handling
- Load and apply saved state on application startup
- Update toggle functions to save state changes immediately
- Add backwards compatibility and validation for state files

--- a/docs/src/content/docs/guides/user-interface.mdx
+++ b/docs/src/content/docs/guides/user-interface.mdx
@@ -27,6 +27,8 @@ you can show or hide panels to customize your view:
 - preview sidebar: `shift+i`
 - footer (all three panels): `shift+f`
 
+**Note:** Your panel visibility preferences are automatically saved and restored when you restart rovr.
+
 ### compact mode
 
 rovr supports a compact mode for smaller terminal windows or when you want to maximize the file list space. in compact mode, the footer panels automatically hide when they're not in use, giving you more space for file browsing.
