docs(cd-on-quit): fix powershell docs link

--- a/docs/src/content/docs/features/cd-on-quit.mdx
+++ b/docs/src/content/docs/features/cd-on-quit.mdx
@@ -97,7 +97,7 @@ add a function to your shell config that wraps the `rovr` command.
         />
         for it to work. For more information on `Set-ExecutionPolicy`, refer to
         its
-        [docs](https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.security/se--env t-executionpolicy)
+        [docs](https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.security/set-executionpolicy)
       </TabItem>
       <TabItem label="nushell">
         <Code
