--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -11,6 +11,7 @@ this page provides a comprehensive list of the default keybindings in `rovr`. yo
 | toggle_pinned_sidebar        | <kbd>S</kbd>                                                                  | Toggle sidebar         |
 | toggle_preview_sidebar       | <kbd>I</kbd>                                                                  | Toggle preview         |
 | toggle_footer                | <kbd>F</kbd>                                                                  | Toggle footer          |
+| toggle_menuwrapper           | <kbd>M</kbd>                                                                  | Toggle menu wrapper    |
 | focus_toggle_pinned_sidebar  | <kbd>s</kbd>                                                                  | Focus sidebar          |
 | focus_file_list              | <kbd>escape</kbd>                                                             | Focus file list        |
 | focus_toggle_preview_sidebar | <kbd>i</kbd>                                                                  | Focus preview          |
@@ -56,6 +57,7 @@ this page provides a comprehensive list of the default keybindings in `rovr`. yo
 | preview_select_right         | <kbd>shift+right</kbd> <kbd>L</kbd>                                           | Select right           |
 | preview_select_left          | <kbd>shift+left</kbd> <kbd>H</kbd>                                            | Select left            |
 | show_keybinds                | <kbd>question_mark</kbd>                                                      | Show keybinds          |
+| change_sort_order            | <kbd>comma</kbd>                                                              | Change sort order      |
 | quit_app                     | <kbd>q</kbd> <kbd>ctrl+q</kbd>                                                | Quit app               |
 | command_palette              | <kbd>c</kbd> <kbd>t</kbd> <kbd>r</kbd> <kbd>l</kbd> <kbd>+</kbd> <kbd>p</kbd> | Launch command palette |
 | suspend_app                  | <kbd>ctrl+z</kbd>                                                             | Suspend app            |
