--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -10,18 +10,20 @@ description: config schema humanified
   - [1.4. Property `Rovr Config > interface > show_progress_eta`](#interface_show_progress_eta)
   - [1.5. Property `Rovr Config > interface > show_progress_percentage`](#interface_show_progress_percentage)
   - [1.6. Property `Rovr Config > interface > truncate_progress_file_path`](#interface_truncate_progress_file_path)
-  - [1.7. Property `Rovr Config > interface > compact_mode`](#interface_compact_mode)
-  - [1.8. Property `Rovr Config > interface > show_line_numbers`](#interface_show_line_numbers)
-  - [1.9. Property `Rovr Config > interface > scrolloff`](#interface_scrolloff)
-  - [1.10. Property `Rovr Config > interface > clock`](#interface_clock)
-    - [1.10.1. Property `Rovr Config > interface > clock > enabled`](#interface_clock_enabled)
-    - [1.10.2. Property `Rovr Config > interface > clock > align`](#interface_clock_align)
-  - [1.11. Property `Rovr Config > interface > preview_text`](#interface_preview_text)
-    - [1.11.1. Property `Rovr Config > interface > preview_text > error`](#interface_preview_text_error)
-    - [1.11.2. Property `Rovr Config > interface > preview_text > binary`](#interface_preview_text_binary)
-    - [1.11.3. Property `Rovr Config > interface > preview_text > start`](#interface_preview_text_start)
-    - [1.11.4. Property `Rovr Config > interface > preview_text > empty`](#interface_preview_text_empty)
-    - [1.11.5. Property `Rovr Config > interface > preview_text > too_large`](#interface_preview_text_too_large)
+  - [1.7. Property `Rovr Config > interface > show_line_numbers`](#interface_show_line_numbers)
+  - [1.8. Property `Rovr Config > interface > scrolloff`](#interface_scrolloff)
+  - [1.9. Property `Rovr Config > interface > clock`](#interface_clock)
+    - [1.9.1. Property `Rovr Config > interface > clock > enabled`](#interface_clock_enabled)
+    - [1.9.2. Property `Rovr Config > interface > clock > align`](#interface_clock_align)
+  - [1.10. Property `Rovr Config > interface > preview_text`](#interface_preview_text)
+    - [1.10.1. Property `Rovr Config > interface > preview_text > error`](#interface_preview_text_error)
+    - [1.10.2. Property `Rovr Config > interface > preview_text > binary`](#interface_preview_text_binary)
+    - [1.10.3. Property `Rovr Config > interface > preview_text > start`](#interface_preview_text_start)
+    - [1.10.4. Property `Rovr Config > interface > preview_text > empty`](#interface_preview_text_empty)
+    - [1.10.5. Property `Rovr Config > interface > preview_text > too_large`](#interface_preview_text_too_large)
+  - [1.11. Property `Rovr Config > interface > compact_mode`](#interface_compact_mode)
+    - [1.11.1. Property `Rovr Config > interface > compact_mode > buttons`](#interface_compact_mode_buttons)
+    - [1.11.2. Property `Rovr Config > interface > compact_mode > panels`](#interface_compact_mode_panels)
 - [2. Property `Rovr Config > settings`](#settings)
   - [2.1. Property `Rovr Config > settings > show_hidden_files`](#settings_show_hidden_files)
   - [2.2. Property `Rovr Config > settings > use_recycle_bin`](#settings_use_recycle_bin)
@@ -172,11 +174,13 @@ description: config schema humanified
     - [7.49.1. Rovr Config > keybinds > preview_select_left > preview_select_left items](#keybinds_preview_select_left_items)
   - [7.50. Property `Rovr Config > keybinds > show_keybinds`](#keybinds_show_keybinds)
     - [7.50.1. Rovr Config > keybinds > show_keybinds > show_keybinds items](#keybinds_show_keybinds_items)
-  - [7.51. Property `Rovr Config > keybinds > quit_app`](#keybinds_quit_app)
-    - [7.51.1. Rovr Config > keybinds > quit_app > quit_app items](#keybinds_quit_app_items)
-  - [7.52. Property `Rovr Config > keybinds > command_palette`](#keybinds_command_palette)
-  - [7.53. Property `Rovr Config > keybinds > suspend_app`](#keybinds_suspend_app)
-    - [7.53.1. Rovr Config > keybinds > suspend_app > suspend_app items](#keybinds_suspend_app_items)
+  - [7.51. Property `Rovr Config > keybinds > change_sort_order`](#keybinds_change_sort_order)
+    - [7.51.1. Rovr Config > keybinds > change_sort_order > change_sort_order items](#keybinds_change_sort_order_items)
+  - [7.52. Property `Rovr Config > keybinds > quit_app`](#keybinds_quit_app)
+    - [7.52.1. Rovr Config > keybinds > quit_app > quit_app items](#keybinds_quit_app_items)
+  - [7.53. Property `Rovr Config > keybinds > command_palette`](#keybinds_command_palette)
+  - [7.54. Property `Rovr Config > keybinds > suspend_app`](#keybinds_suspend_app)
+    - [7.54.1. Rovr Config > keybinds > suspend_app > suspend_app items](#keybinds_suspend_app_items)
 - [8. Property `Rovr Config > plugins`](#plugins)
   - [8.1. Property `Rovr Config > plugins > zoxide`](#plugins_zoxide)
     - [8.1.1. Property `Rovr Config > plugins > zoxide > enabled`](#plugins_zoxide_enabled)
@@ -235,11 +239,11 @@ description: config schema humanified
 | [show_progress_eta](#interface_show_progress_eta)                     | boolean | When copying or deleting files, show an ETA for when the action will be completed.                                        |
 | [show_progress_percentage](#interface_show_progress_percentage)       | boolean | When copying or deleting files, show a percentage of how much had been completed.                                         |
 | [truncate_progress_file_path](#interface_truncate_progress_file_path) | boolean | When the process container is using file paths, truncate the file path to only view the first and last names of the path. |
-| [compact_mode](#interface_compact_mode)                               | boolean | Enable compact mode to hide the menu bar and adjust layout for a more streamlined interface.                              |
 | [show_line_numbers](#interface_show_line_numbers)                     | boolean | Add line numbers to the left gutter if you are viewing a text file.                                                       |
 | [scrolloff](#interface_scrolloff)                                     | integer | The number of files to keep above and below the cursor when moving through the file list.                                 |
 | [clock](#interface_clock)                                             | object  |                                                                                                                           |
 | [preview_text](#interface_preview_text)                               | object  |                                                                                                                           |
+| [compact_mode](#interface_compact_mode)                               | object  |                                                                                                                           |
 
 ### <a name="interface_tooltips"></a>1.1. Property `Rovr Config > interface > tooltips`
 
@@ -303,17 +307,7 @@ Not properly hot-reloaded.
 
 **Description:** When the process container is using file paths, truncate the file path to only view the first and last names of the path.
 
-### <a name="interface_compact_mode"></a>1.7. Property `Rovr Config > interface > compact_mode`
-
-|              |           |
-| ------------ | --------- |
-| **Type**     | `boolean` |
-| **Required** | No        |
-| **Default**  | `false`   |
-
-**Description:** Enable compact mode to hide the menu bar and adjust layout for a more streamlined interface.
-
-### <a name="interface_show_line_numbers"></a>1.8. Property `Rovr Config > interface > show_line_numbers`
+### <a name="interface_show_line_numbers"></a>1.7. Property `Rovr Config > interface > show_line_numbers`
 
 |              |           |
 | ------------ | --------- |
@@ -323,7 +317,7 @@ Not properly hot-reloaded.
 
 **Description:** Add line numbers to the left gutter if you are viewing a text file.
 
-### <a name="interface_scrolloff"></a>1.9. Property `Rovr Config > interface > scrolloff`
+### <a name="interface_scrolloff"></a>1.8. Property `Rovr Config > interface > scrolloff`
 
 |              |           |
 | ------------ | --------- |
@@ -337,7 +331,7 @@ Not properly hot-reloaded.
 | ------------ | ------ |
 | **Minimum**  | &ge; 0 |
 
-### <a name="interface_clock"></a>1.10. Property `Rovr Config > interface > clock`
+### <a name="interface_clock"></a>1.9. Property `Rovr Config > interface > clock`
 
 |                           |             |
 | ------------------------- | ----------- |
@@ -350,7 +344,7 @@ Not properly hot-reloaded.
 | [enabled](#interface_clock_enabled) | boolean          | Show a clock in the tabs bar.                                    |
 | [align](#interface_clock_align)     | enum (of string) | Align the clock to either the 'right' or 'left' of the tabs bar. |
 
-#### <a name="interface_clock_enabled"></a>1.10.1. Property `Rovr Config > interface > clock > enabled`
+#### <a name="interface_clock_enabled"></a>1.9.1. Property `Rovr Config > interface > clock > enabled`
 
 |              |           |
 | ------------ | --------- |
@@ -360,7 +354,7 @@ Not properly hot-reloaded.
 
 **Description:** Show a clock in the tabs bar.
 
-#### <a name="interface_clock_align"></a>1.10.2. Property `Rovr Config > interface > clock > align`
+#### <a name="interface_clock_align"></a>1.9.2. Property `Rovr Config > interface > clock > align`
 
 |              |                    |
 | ------------ | ------------------ |
@@ -375,7 +369,7 @@ Must be one of:
 - "left"
 - "right"
 
-### <a name="interface_preview_text"></a>1.11. Property `Rovr Config > interface > preview_text`
+### <a name="interface_preview_text"></a>1.10. Property `Rovr Config > interface > preview_text`
 
 |                           |             |
 | ------------------------- | ----------- |
@@ -391,7 +385,7 @@ Must be one of:
 | [empty](#interface_preview_text_empty)         | string | If the current file has no content, this is shown                                                                                                          |
 | [too_large](#interface_preview_text_too_large) | string | If the file is too large (hard capped at < 1MB), the preview will refuse to render this file regardless of your memory size                                |
 
-#### <a name="interface_preview_text_error"></a>1.11.1. Property `Rovr Config > interface > preview_text > error`
+#### <a name="interface_preview_text_error"></a>1.10.1. Property `Rovr Config > interface > preview_text > error`
 
 |              |                                     |
 | ------------ | ----------------------------------- |
@@ -401,7 +395,7 @@ Must be one of:
 
 **Description:** If for any reason the file preview refused to show, this appears.
 
-#### <a name="interface_preview_text_binary"></a>1.11.2. Property `Rovr Config > interface > preview_text > binary`
+#### <a name="interface_preview_text_binary"></a>1.10.2. Property `Rovr Config > interface > preview_text > binary`
 
 |              |                                                            |
 | ------------ | ---------------------------------------------------------- |
@@ -411,7 +405,7 @@ Must be one of:
 
 **Description:** If the current file cannot be read due to an encoding issue (ie not UTF8), it will display this message.
 
-#### <a name="interface_preview_text_start"></a>1.11.3. Property `Rovr Config > interface > preview_text > start`
+#### <a name="interface_preview_text_start"></a>1.10.3. Property `Rovr Config > interface > preview_text > start`
 
 |              |                                                                                                                                      |
 | ------------ | ------------------------------------------------------------------------------------------------------------------------------------ |
@@ -421,7 +415,7 @@ Must be one of:
 
 **Description:** This is shown when the rovr starts up. You may see it for a split second, but it will never appear afterwards. You cannot view this properly in this docs.
 
-#### <a name="interface_preview_text_empty"></a>1.11.4. Property `Rovr Config > interface > preview_text > empty`
+#### <a name="interface_preview_text_empty"></a>1.10.4. Property `Rovr Config > interface > preview_text > empty`
 
 |              |                          |
 | ------------ | ------------------------ |
@@ -431,7 +425,7 @@ Must be one of:
 
 **Description:** If the current file has no content, this is shown
 
-#### <a name="interface_preview_text_too_large"></a>1.11.5. Property `Rovr Config > interface > preview_text > too_large`
+#### <a name="interface_preview_text_too_large"></a>1.10.5. Property `Rovr Config > interface > preview_text > too_large`
 
 |              |                                                           |
 | ------------ | --------------------------------------------------------- |
@@ -440,6 +434,39 @@ Must be one of:
 | **Default**  | `"this file is larger (but not larger than your mother)"` |
 
 **Description:** If the file is too large (hard capped at < 1MB), the preview will refuse to render this file regardless of your memory size
+
+### <a name="interface_compact_mode"></a>1.11. Property `Rovr Config > interface > compact_mode`
+
+|                           |             |
+| ------------------------- | ----------- |
+| **Type**                  | `object`    |
+| **Required**              | No          |
+| **Additional properties** | Not allowed |
+
+| Property                                   | Type    | Title/Description                                                            |
+| ------------------------------------------ | ------- | ---------------------------------------------------------------------------- |
+| [buttons](#interface_compact_mode_buttons) | boolean | Whether to compact the buttons and path input to one line instead of three.  |
+| [panels](#interface_compact_mode_panels)   | boolean | Whether to make the panels smaller to add more room for the file list itself |
+
+#### <a name="interface_compact_mode_buttons"></a>1.11.1. Property `Rovr Config > interface > compact_mode > buttons`
+
+|              |           |
+| ------------ | --------- |
+| **Type**     | `boolean` |
+| **Required** | No        |
+| **Default**  | `false`   |
+
+**Description:** Whether to compact the buttons and path input to one line instead of three.
+
+#### <a name="interface_compact_mode_panels"></a>1.11.2. Property `Rovr Config > interface > compact_mode > panels`
+
+|              |           |
+| ------------ | --------- |
+| **Type**     | `boolean` |
+| **Required** | No        |
+| **Default**  | `false`   |
+
+**Description:** Whether to make the panels smaller to add more room for the file list itself
 
 ## <a name="settings"></a>2. Property `Rovr Config > settings`
 
@@ -1133,6 +1160,7 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | [preview_select_right](#keybinds_preview_select_right)                 | array of string | While using TextArea for previewing, use this keybind to extend selection to the right.           |
 | [preview_select_left](#keybinds_preview_select_left)                   | array of string | While using TextArea for previewing, use this keybind to extend selection to the left.            |
 | [show_keybinds](#keybinds_show_keybinds)                               | array of string | Show the keybinds list with all available keybinds.                                               |
+| [change_sort_order](#keybinds_change_sort_order)                       | array of string | Show a chooser to change the sort order.                                                          |
 | [quit_app](#keybinds_quit_app)                                         | array of string | Quit the application                                                                              |
 | [command_palette](#keybinds_command_palette)                           | string          | Launch Textual's mildly useful command palette (only one keybind is allowed!)                     |
 | [suspend_app](#keybinds_suspend_app)                                   | array of string | Suspend the app's process, bringing you back to the terminal                                      |
@@ -2537,7 +2565,35 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | **Type**     | `string` |
 | **Required** | No       |
 
-### <a name="keybinds_quit_app"></a>7.51. Property `Rovr Config > keybinds > quit_app`
+### <a name="keybinds_change_sort_order"></a>7.51. Property `Rovr Config > keybinds > change_sort_order`
+
+|              |                   |
+| ------------ | ----------------- |
+| **Type**     | `array of string` |
+| **Required** | No                |
+
+**Description:** Show a chooser to change the sort order.
+
+|                      | Array restrictions |
+| -------------------- | ------------------ |
+| **Min items**        | N/A                |
+| **Max items**        | N/A                |
+| **Items unicity**    | False              |
+| **Additional items** | False              |
+| **Tuple validation** | See below          |
+
+| Each item of this array must be                              | Description |
+| ------------------------------------------------------------ | ----------- |
+| [change_sort_order items](#keybinds_change_sort_order_items) |             |
+
+#### <a name="keybinds_change_sort_order_items"></a>7.51.1. Rovr Config > keybinds > change_sort_order > change_sort_order items
+
+|              |          |
+| ------------ | -------- |
+| **Type**     | `string` |
+| **Required** | No       |
+
+### <a name="keybinds_quit_app"></a>7.52. Property `Rovr Config > keybinds > quit_app`
 
 |              |                   |
 | ------------ | ----------------- |
@@ -2558,14 +2614,14 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | ------------------------------------------ | ----------- |
 | [quit_app items](#keybinds_quit_app_items) |             |
 
-#### <a name="keybinds_quit_app_items"></a>7.51.1. Rovr Config > keybinds > quit_app > quit_app items
+#### <a name="keybinds_quit_app_items"></a>7.52.1. Rovr Config > keybinds > quit_app > quit_app items
 
 |              |          |
 | ------------ | -------- |
 | **Type**     | `string` |
 | **Required** | No       |
 
-### <a name="keybinds_command_palette"></a>7.52. Property `Rovr Config > keybinds > command_palette`
+### <a name="keybinds_command_palette"></a>7.53. Property `Rovr Config > keybinds > command_palette`
 
 |              |          |
 | ------------ | -------- |
@@ -2574,7 +2630,7 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 
 **Description:** Launch Textual's mildly useful command palette (only one keybind is allowed!)
 
-### <a name="keybinds_suspend_app"></a>7.53. Property `Rovr Config > keybinds > suspend_app`
+### <a name="keybinds_suspend_app"></a>7.54. Property `Rovr Config > keybinds > suspend_app`
 
 |              |                   |
 | ------------ | ----------------- |
@@ -2595,7 +2651,7 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | ------------------------------------------------ | ----------- |
 | [suspend_app items](#keybinds_suspend_app_items) |             |
 
-#### <a name="keybinds_suspend_app_items"></a>7.53.1. Rovr Config > keybinds > suspend_app > suspend_app items
+#### <a name="keybinds_suspend_app_items"></a>7.54.1. Rovr Config > keybinds > suspend_app > suspend_app items
 
 |              |          |
 | ------------ | -------- |
