fix(keybinds): set default to focus processes to #

--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -16,7 +16,7 @@ this page provides a comprehensive list of the default keybindings in `rovr`. yo
 | focus_file_list              | <kbd>escape</kbd>                                                             | Focus file list        |
 | focus_toggle_preview_sidebar | <kbd>i</kbd>                                                                  | Focus preview          |
 | focus_toggle_path_switcher   | <kbd>ctrl+l</kbd>                                                             | Focus path             |
-| focus_toggle_processes       | <kbd>f6</kbd>                                                                 | Focus processes        |
+| focus_toggle_processes       | <kbd>number_sign</kbd>                                                        | Focus processes        |
 | focus_toggle_clipboard       | <kbd>c</kbd>                                                                  | Focus clipboard        |
 | focus_toggle_metadata        | <kbd>m</kbd>                                                                  | Focus metadata         |
 | focus_search                 | <kbd>ctrl+f</kbd> <kbd>slash</kbd>                                            | Search                 |
