--- a/docs/src/content/docs/guides/user-interface.mdx
+++ b/docs/src/content/docs/guides/user-interface.mdx
@@ -3,7 +3,7 @@ title: user interface
 description: an overview of the rovr user interface and how to navigate it.
 ---
 
-{/* <add image> */}
+![main interface](/rovr/screenshots/main.svg)
 
 rovr's user interface has several panels that you can navigate between using the keyboard.
 
@@ -34,7 +34,9 @@ you can show or hide panels to customize your view:
 rovr supports compact mode options for smaller terminal windows or when you want to maximize the file list space. compact mode has two separate options that can be enabled independently:
 
 - **buttons**: compacts the action buttons and path input to one line instead of three
+![compact buttons enabled](/rovr/screenshots/compact_buttons.svg)
 - **panels**: makes the footer panels smaller to give more room for the file list
+![compact panels enabled](/rovr/screenshots/compact_panels.svg)
 
 To enable compact mode options, set the following in your `config.toml`:
 
@@ -44,13 +46,12 @@ buttons = true  # compact buttons and path input
 panels = true   # make panels smaller
 ```
 
-{/* <add image> */}
 
 You can enable either or both options depending on your preferences and terminal size.
 
 ### tabs
 
-{/* <add image> */}
+![multiple tabs](/rovr/screenshots/tabs.svg)
 
 rovr supports tabs to manage multiple file list views simultaneously.
 
@@ -61,6 +62,6 @@ rovr supports tabs to manage multiple file list views simultaneously.
 
 ### help and shortcuts
 
-{/* <add image> */}
+![keybind list](/rovr/screenshots/keybind-list.svg)
 
 - view all available keybindings: `?` - this opens a help screen showing all available shortcuts and their functions
