--- a/docs/src/content/docs/guides/file-operations.mdx
+++ b/docs/src/content/docs/guides/file-operations.mdx
@@ -3,13 +3,9 @@ title: file operations
 description: how to manage files and folders in rovr.
 ---
 
-{/* <add image> */}
-
-rovr provides a comprehensive set of actions to manage your files and folders.
+rovr provides a bunch set of actions to handle your files and folders.
 
 ### clipboard actions
-
-{/* <add image> */}
 
 - copy to clipboard: `y` or `ctrl+c`
 - cut to clipboard: `x` or `ctrl+x`
@@ -28,7 +24,7 @@ rovr provides a comprehensive set of actions to manage your files and folders.
 
 ### visual/select mode
 
-{/* <add image> */}
+![select/visual mode](/rovr/screenshots/select-mode.svg)
 
 the main file list supports a multi-selection mode, sort of like vi's visual mode.
 
@@ -45,7 +41,7 @@ once in visual mode, you can select multiple files:
 
 ### mouse interactions
 
-{/* <add image> */}
+![a mini popup from right-clicking an object](/rovr/screenshots/right-click.svg)
 
 rovr supports mouse interactions for enhanced usability:
 
