--- a/docs/src/content/docs/get-started/installation.mdx
+++ b/docs/src/content/docs/get-started/installation.mdx
@@ -5,8 +5,6 @@ description: how to install rovr
 
 ### requirements
 
-{/* <add image> */}
-
 - a patched font that supports nerd font icons
   <br />
   if you dont have any supported fonts, get one from
@@ -58,4 +56,4 @@ rovr --version
 
 to see the current version installed
 
-{/* <add image> */}
+![version](/rovr/screenshots/version.png)
