--- a/docs/src/content/docs/features/context-menu.mdx
+++ b/docs/src/content/docs/features/context-menu.mdx
@@ -3,13 +3,11 @@ title: context menu
 description: using the right-click context menu in rovr.
 ---
 
-{/* <add image> */}
-
 rovr provides a convenient right-click context menu that gives you quick access to common file operations.
 
 ## accessing the context menu
 
-{/* <add image> */}
+![context menu](/rovr/screenshots/right-click.svg)
 
 you can open the context menu by:
 - **right-clicking** on any file or folder in the file list
@@ -21,15 +19,11 @@ the context menu includes the following operations:
 
 ### copy
 
-{/* <add image> */}
-
 copy the selected file(s) to rovr's clipboard.
 - equivalent to pressing `y` or `ctrl+c`
 - works with multiple selections
 
 ### cut
-
-{/* <add image> */}
 
 cut the selected file(s) to rovr's clipboard for moving.
 - equivalent to pressing `x` or `ctrl+x`
@@ -37,15 +31,11 @@ cut the selected file(s) to rovr's clipboard for moving.
 
 ### paste
 
-{/* <add image> */}
-
 paste files from rovr's clipboard to the current directory.
 - equivalent to pressing `p` or `ctrl+v`
 - handles conflicts with duplicate file names
 
 ### rename
-
-{/* <add image> */}
 
 rename the selected item.
 - equivalent to pressing `r` or `f2`
@@ -53,16 +43,12 @@ rename the selected item.
 
 ### delete
 
-{/* <add image> */}
-
 delete the selected file(s).
 - equivalent to pressing `d` or `delete`
 - works with multiple selections
 - uses recycle bin if enabled in config
 
-### create archive
-
-{/* <add image> */}
+### zip
 
 compress the selected file(s) into an archive.
 - equivalent to pressing `shift+e`
@@ -70,8 +56,6 @@ compress the selected file(s) into an archive.
 - works with multiple selections
 
 ### extract archive
-
-{/* <add image> */}
 
 extract the contents of a compressed file.
 - equivalent to pressing `ctrl+e`
@@ -94,8 +78,6 @@ when the context menu is open:
 
 ## double-click behavior
 
-{/* <add image> */}
-
 in addition to the context menu, rovr supports double-clicking:
 - **on folders**: opens the folder (same as pressing `enter`)
 - **on files**: attempts to open the file with the default application
@@ -109,7 +91,5 @@ double_click_delay = 0.25
 ```
 
 ## mouse scroll
-
-{/* <add image> */}
 
 you can also use your mouse wheel to scroll through the file list when hovering over it.
