--- a/docs/src/content/docs/features/search.mdx
+++ b/docs/src/content/docs/features/search.mdx
@@ -3,13 +3,9 @@ title: search
 description: how to search for files and folders in rovr.
 ---
 
-{/* <add image> */}
-
 `rovr` provides a fuzzy search functionality to quickly find items in the file list and pinned sidebar.
 
 ### how to use search
-
-{/* <add image> */}
 
 1.  focus the file list or pinned sidebar.
 2.  press `/` or `ctrl+f` to focus the search bar for that panel.
@@ -19,8 +15,6 @@ the list will be filtered in real-time to show only the items that match your qu
 
 ### fuzzy matching
 
-{/* <add image> */}
-
 the search uses fuzzy matching, which means you don't have to type the exact name of the file or folder. the characters in your search query just need to appear in the item's name in the same order.
 
 for example, to find `any_file_that_you_could_think_of.txt`, you could type:
@@ -28,6 +22,8 @@ for example, to find `any_file_that_you_could_think_of.txt`, you could type:
 - `ayc`
 - `aftyctot`
 - `______.`
+
+![find fuzzily, anything](/rovr/screenshots/find-go-crazy.svg)
 
 and it will still be matched.
 
