--- a/docs/src/content/docs/configuration/configuration.mdx
+++ b/docs/src/content/docs/configuration/configuration.mdx
@@ -41,14 +41,15 @@ rovr --config-path
 ╰──────────────────┴────────────────────────────╯
 ```
 
-inside it, you can see 3 files if you previously launched rovr
+inside it, you can see 4 files if you previously launched rovr
 
 <FileTree>
 
 - rovr
   - config.toml
-  - styles.tcss
   - pins.json
+  - styles.tcss
+  - state.toml
 
 </FileTree>
 
