--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -8,7 +8,7 @@ there are a couple plugins to improve rovr's functionality. enable and configure
 ### zoxide
 
 <img
-  src="https://github.com/NSPC911/rovr/blob/master/img/0.1.0/rovr_zoxide.png?raw=true"
+  src="/rovr/screenshots/plugin-zoxide.svg"
   alt="rovr's zoxide integration"
 />
 
@@ -18,11 +18,6 @@ there are a couple plugins to improve rovr's functionality. enable and configure
 - **keybinding:** the default keybinding to open the zoxide dialog is `z`.
 
 ### bat
-
-<img
-  src="https://github.com/NSPC911/rovr/blob/master/img/0.1.0/rovr_with_bat.png?raw=true"
-  alt="rovr's bat integration"
-/>
 
 to allow for more file previews, [bat](https://github.com/sharkdp/bat) can be used for its syntax highlighting capabilities.
 
@@ -39,6 +34,11 @@ opens files and folders in your preferred editor.
 - **keybinding:** the default keybinding is `e`.
 
 ### finder
+
+<img
+  src="/rovr/screenshots/plugin-finder.svg"
+  alt="rovr's fd integration"
+/>
 
 uses [fd](https://github.com/sharkdp/fd) to search recursively in the current directory
 
