--- a/docs/src/content/docs/overview.mdx
+++ b/docs/src/content/docs/overview.mdx
@@ -4,7 +4,7 @@ description: overview on rovr with latest features
 ---
 
 <img
-  src="https://github.com/NSPC911/rovr/blob/master/img/0.1.0/rovr_main.png?raw=true"
+  src="/rovr/screenshots/main.svg"
   alt="normal user interface"
 />
 
@@ -25,14 +25,14 @@ rovr now includes a comprehensive state management system that automatically sav
 
 #### enhanced sorting
 the new sort order switcher provides quick access to sorting options:
-- cycle through different sort orders without opening menus  
+- cycle through different sort orders without opening menus
 - visual feedback with icons showing current sort type and direction
 - all sort preferences are automatically saved via the state manager
 
 #### flexible compact modes
 compact mode has been expanded into granular options:
 - **header compact mode**: reduces header height for more vertical space
-- **footer compact mode**: auto-hides footer panels when not in use  
+- **footer compact mode**: auto-hides footer panels when not in use
 - **legacy compact mode**: maintains backward compatibility
 - state manager preserves your manual panel preferences even in compact modes
 
