--- a/docs/src/content/docs/features/persistent-state.mdx
+++ b/docs/src/content/docs/features/persistent-state.mdx
@@ -22,9 +22,8 @@ when you toggle these panels using their keyboard shortcuts, the state is automa
 ### sort preferences
 
 your file sorting configuration persists between sessions:
-- **sort criteria**: whether you're sorting by name, size, extension, natural order, created time, modified time, or accessed time
+- **sort criteria**: whether you're sorting by name, size, extension, natural order, created time, or modified time
 - **sort direction**: ascending or descending order
-- **folder positioning**: whether folders appear first, last, or mixed with files
 
 for more details on sorting, see the [sorting files](/rovr/features/sorting) guide.
 
@@ -80,4 +79,4 @@ if you want to reset to default preferences, you can:
 
 rovr will automatically create a new state file with default values:
 - all panels visible
-- sort by name in ascending order by name
+- sort by name in ascending order
