--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -134,8 +134,8 @@ rovr stores its configuration in your system's standard config directory:
 - **linux**: `~/.config/rovr/config.toml`
 
 rovr is designed similarly to ghostty where it should work with minimal configuration, but has a quite comprehensive customisability options.
-common changes would be these
 
+here are some common changes
 ```toml
 [interface]
 # hide hidden files (toggleable with `.`)
