--- a/docs/src/content/docs/configuration/themeing.mdx
+++ b/docs/src/content/docs/configuration/themeing.mdx
@@ -3,7 +3,7 @@ title: themeing
 description: how the theme rovr
 ---
 
-rovr can be themed in two ways, via the `config.toml` file and `styles.tcss` file.
+rovr can be themed in two ways, via the `config.toml` file and `style.tcss` file.
 
 ### config.toml
 
@@ -44,7 +44,7 @@ you can take a look at the reference in [textual](https://textual.textualize.io/
 | is_dark    | used sparingly to draw attention and contrasts with `primary` and `secondary`                                            |
 | variables  | custom variables that are used by textual. [variables](https://textual.textualize.io/guide/design/#additional-variables) |
 
-### styles.tcss
+### style.tcss
 
 styling in textual is handled by `tcss` files, a simplified version of the web's `css`. a reference is available in the [textual docs](https://textual.textualize.io/styles/)
 
