docs: rephrase more

--- a/docs/src/content/docs/configuration/configuration.mdx
+++ b/docs/src/content/docs/configuration/configuration.mdx
@@ -76,7 +76,7 @@ rovr comes with some variables pre-initialised, that you can overwrite.
   lang="scss"
   title="style.tcss"
 />
-For more advanced styling, refer to [`configuration/themeing`](/rovr/configuration/themeing)
+For more advanced styling, refer to [`configuration/theming`](/rovr/configuration/theming)
 
 ### pins.json
 
