--- a/docs/src/content/docs/contributing/how-to-contribute.mdx
+++ b/docs/src/content/docs/contributing/how-to-contribute.mdx
@@ -28,7 +28,7 @@ is_dark    = true
 variables  = { "<var>" = "<key>" }
 ```
 
-for more information, please refer to [themeing](/rovr/configuration/themeing)
+for more information, please refer to [theming](/rovr/configuration/theming)
 
 once you are done, make a pull request with screenshots made by textual
 
