--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -133,13 +133,11 @@ rovr stores its configuration in your system's standard config directory:
 - **macos**: `~/Library/Application Support/rovr/config.toml`
 - **linux**: `~/.config/rovr/config.toml`
 
-rovr is designed similarly to ghostty where it should work with minimal configuration, but has a quite comprehensive customisability options.
+rovr is designed similarly to ghostty where it should work with minimal configuration, but has a lot of customisable options.
 
 here are some common changes
 ```toml
 [interface]
-# hide hidden files (toggleable with `.`)
-show_hidden = true
 # hide tooltips when hovering over buttons
 tooltips = false
 # make ui not change based on width/height
