--- a/docs/src/content/docs/configuration/theming.mdx
+++ b/docs/src/content/docs/configuration/theming.mdx
@@ -1,6 +1,6 @@
 ---
-title: themeing
-description: how the theme rovr
+title: theming
+description: how to theme rovr
 ---
 
 rovr can be themed in two ways, via the `config.toml` file and `style.tcss` file.
@@ -72,4 +72,4 @@ Application class="-dark-mode"
             └── FileList id="file_list" class="file-list"
 ```
 
-you may notice that inheriting of classes is not shown, `FileListContainer` inherits `VerticalGroup` while `FileList` inherits `SelectionList`. I will soon add support, but not just yet.
+you may notice that class inheritance is not shown, `FileListContainer` inherits `VerticalGroup` while `FileList` inherits `SelectionList`. I will soon add support, but not just yet.
